--- a/entity-news-mcp/pyproject.toml
+++ b/entity-news-mcp/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "mcp[cli]>=1.20.0",
     "requests>=2.32.5",
+    "httpx>=0.27.0",
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.30.0",
     "pydantic>=2.0.0",
+    "psutil>=5.9.0",
 ]
