--- a/openai_agents_sdk_trader_signals/.env.example
+++ b/openai_agents_sdk_trader_signals/.env.example
@@ -10,3 +10,12 @@ GNEWS_API_KEY=your-gnews-api-key-here
 
 # NewsAPI Key (required if using NewsAPI)
 NEWSAPI_KEY=your-newsapi-key-here
+
+# Logging Configuration
+# Set LOG_LEVEL to: DEBUG, INFO, WARNING, ERROR, or CRITICAL (default: INFO)
+LOG_LEVEL=INFO
+
+# Concurrency Configuration (optional)
+# MAX_CONCURRENT_NEWS_AGENTS=10
+# MAX_CONCURRENT_SENTIMENT_AGENTS=5  # Reduced default to avoid rate limits
+# MAX_RETRIES=3  # Maximum retries for rate limit errors (default: 3)
